comment cleanups and add @Nullable annotation